# course_work_parallel

./: .gitignore  CMakeLists.txt
src/: FileIndexer.cpp  FileIndexer.h  common.cpp  common.h  file_indexer.cpp  file_indexer.h  main.cpp  main_helper.h
src/api/: http_specific.cpp  http_specific.h  route_handler.cpp  route_handler.h  router.cpp  router.h  server.cpp  server.h  socketUtils.cpp  socketUtils.h  socket_utils.cpp  socket_utils.h
src/text_utils/: fileParser.cpp  fileParser.h  file_parser.cpp  file_parser.h
src/thread_pool/: pool.cpp  pool.h
